Fix dual-channel transaction logging and improve system stability
- Fixed TransactionLogAppender to properly access Spring context for database logging
- Created SpringContext utility for accessing Spring beans from non-managed objects
- Removed security vulnerability exposing admin credentials in startup logs
- Enhanced logging markers for proper log file categorization
- Fixed SystemLogsController to read from database instead of files
- Improved DataRetentionManagement with proper error handling
- Updated all validator services with comprehensive validation logic
- Added comprehensive error handling and validation across all controllers
- Enhanced adapter execution with better file metrics extraction
- Implemented OOP best practices following repository standardization

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>